--- a/Taller juegos/app/src/main/AndroidManifest.xml
+++ b/Taller juegos/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.Juegos"
         tools:targetApi="31">
         <activity
+            android:name=".CreditsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TriquiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MemoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".ListActivity"
             android:exported="true" />
         <activity
